[HuuNT] config file

--- a/bootstarp.properties
+++ b/bootstarp.properties
@@ -1,4 +1,25 @@
-spring.cloud.config.uri=http://localhost:8082
-spring.cloud.config.name=employeemanagement
-spring.cloud.config.profile=active
+spring.application.name=employeemanagement
+server.port=8083
+
+spring.datasource.url=jdbc:postgresql://host.docker.internal:49153/postgres?user=postgres&password=postgrespw
+spring.datasource.username=postgres
+spring.datasource.password=postgrespw
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+### Hibernate Properties
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#
+## Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+eureka.instance.leaseRenewalIntervalInSeconds = 10
+eureka.instance.metadataMap.instanceId=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
+
+eureka.instance.instanceId=${spring.application.name}:${spring.application.instance_id:${random.value}}
+
+eureka.client.registryFetchIntervalSeconds=5
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+spring.cloud.service-registry.auto-registration.enabled=true
+eureka.client.enabled=true
 eureka.client.serviceUrl.registerWithEureka=true
